--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,82 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    app:cardBackgroundColor="@color/transparent"
+    app:cardCornerRadius="15dp"
+    android:layout_margin="20dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black"
-        tools:ignore="MissingConstraints">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:background="@color/transparent"
-            android:layout_marginRight="24dp"
-            android:layout_marginTop="50dp">
+        android:id="@+id/LinearLayout"
+        android:background="@color/transparent">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="5dp"
-                android:layout_height="77dp"
-                android:radius="15dp"
-                android:background="@drawable/background"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:background="@color/transparent"
+                tools:ignore="MissingConstraints,Orientation">
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center">
-                    <ImageView
-                        android:id="@+id/IMG_ICON"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/icon_image"
-                        tools:ignore="ContentDescription" />
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/LY_CONTAINER"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_marginStart="15dp"
-                    android:orientation="vertical">
+                    android:layout_height="77dp"
+                    android:radius="15dp"
+                    android:background="@drawable/background"
+                    android:orientation="horizontal">
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/TXT_NAME"
-                            android:layout_weight="1"
-                            android:textColor="@color/black"
-                            android:textStyle="bold"
-                            android:textSize="14sp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/belanja"/>
-                        <TextView
-                            android:layout_weight="1"
-                            android:id="@+id/TXT_DATE"
-                            android:gravity="right"
-                            android:paddingRight="10dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/black"
-                            android:text="@string/_30_maret_2021"
-                            tools:ignore="RtlHardcoded,RtlSymmetry" />
+                        android:layout_width="wrap_content"
+                        android:layout_margin="10dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center">
+                        <ImageView
+                            android:id="@+id/IMG_ICON"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/icon_image"
+                            tools:ignore="ContentDescription" />
                     </LinearLayout>
-                    <TextView
-                        android:id="@+id/TXT_AMOUNT"
+                    <LinearLayout
+                        android:id="@+id/LY_CONTAINER"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/rp_1_000_000"
-                        android:textSize="14sp"
-                        android:textColor="#1DAA53"
-                        android:textStyle="bold"/>
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:layout_marginStart="15dp"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/name"
+                                android:layout_weight="1"
+                                android:textColor="@color/black"
+                                android:textStyle="bold"
+                                android:textSize="14dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+                            <TextView
+                                android:layout_weight="1"
+                                android:id="@+id/number"
+                                android:gravity="right"
+                                android:paddingRight="10dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                tools:ignore="RtlHardcoded,RtlSymmetry" />
+                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/rating"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="95dp"
+                            android:textColor="#1DAA53"
+                            android:textSize="14dp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
